--- a/lsts.plist
+++ b/lsts.plist
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>wwwww</string>
+				<string>手机商城</string>
 			</dict>
 		</dict>
 	</array>
