--- a/LSGMIS.plist
+++ b/LSGMIS.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://218.200.188.226/Wap/Upload/LSGMIS.ipa</string>
+					<string>http://218.200.188.226/Wap/Upload/凉山GMIS.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
