--- a/JXGFT.plist
+++ b/JXGFT.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://218.200.187.203:5010/download/LSGFT.ipa</string>
+					<string>http://218.200.187.203:5010/download/JXGFT.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
