--- a/huilitoday.plist
+++ b/huilitoday.plist
@@ -9,7 +9,7 @@
 			<array>
 				<dict>
 					<key>kind</key>
-					<string>今日会理</string>
+					<string>浠婃棩浼氱悊</string>
 					<key>url</key>
 					<string>http://218.205.243.101:8089/AppDataSource/huiliToday.ipa</string>
 				</dict>
