--- a/yixianyingxiao.plist
+++ b/yixianyingxiao.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://112.53.170.2:1000/APP/iphone.ipa</string>
+					<string>https://112.53.170.2:1000/APP/iphone.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
