--- a/yaodian.plist
+++ b/yaodian.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://jksyd.ydsyd.com:8010/ydsyd.ipa</string>
+					<string>http://www.ydsyd.cn:8889/APP/ydsdy.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
