成都联宇EIP客户端名字修改
成都联宇EIP客户端名字修改

--- a/EasyManEip.plist
+++ b/EasyManEip.plist
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>ÁªÓî´´ÐÂEIP</string>
+				<string>EasyManEIP</string>
 			</dict>
 		</dict>
 	</array>
